--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,9 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation 'com.google.mediapipe:tasks-vision-image-generator:0.10.14'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+}
