--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.19.0
   path_provider: ^2.1.3
+  flutter_gemini: ^2.0.4
+  google_generative_ai: ^0.4.3
+  # flutter_gemma: ^0.2.1
+  # mediapipe_genai: ^0.0.1
+  # mediapipe_core: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,6 +79,7 @@ flutter:
   assets:
     - assets/models/squat/front/
     - assets/models/squat/side/
+    - assets/models/image_generator/
     - assets/icons/
     - assets/test.png
     - assets/animated_check.json
